<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="sdei.trumpbeach.resort.features.loginSignup.login.LoginPresenter" />
    </data>

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/splash_background"
        tools:context="sdei.trumpbeach.resort.features.loginSignup.signup.RegistrationActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_registeration" />



        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <EditText
            style="@style/edtextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin40dp"
            android:layout_marginRight="@dimen/margin40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@={data.userName}"
            />


        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin40dp"
            android:layout_marginRight="@dimen/margin40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/edtextTheme"
            android:text="@={data.password}"
            />



        <Button
            android:id="@+id/btnLogin"
            android:layout_margin="@dimen/margin40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btnAccentTheme"
            android:text="@string/sign_in"
            android:onClick="@{data::LoginClicked}"
        />



        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:background="@drawable/default_btn_selector"
            android:layout_marginBottom="@dimen/margin20dp"
            android:text="@string/unable_to_sign_in"
            android:textColor="@color/white"
            android:textSize="21sp" />



    </LinearLayout>
    <!--</ScrollView>-->
</layout>